fix: question, answer 로직 수정 (#26)